Package_Tools/include-C/mgl2/c/in_arbeit/fertig/data_cf.h


HMDT  mgl_data_flame_2d(HCDT A, HCDT F, long n, long skip);


HMDT  mgl_data_detect(HCDT d, mreal lvl, mreal dj, mreal di, mreal min_len);


HMDT  mgl_data_tridmat(HCDT A, HCDT B, HCDT C, HCDT D, const char *how);


 mreal *mgl_data_value(HMDT dat, long i,long j,long k);

 mreal *mgl_data_data(HMDT dat);


long  mgl_data_get_nx(HCDT d);

long  mgl_data_get_ny(HCDT d);

long  mgl_data_get_nz(HCDT d);


HMDT  mgl_data_combine(HCDT dat1, HCDT dat2);

void  mgl_data_extend(HMDT dat, long n1, long n2);

void  mgl_data_insert(HMDT dat, char dir, long at, long num);

void  mgl_data_delete(HMDT dat, char dir, long at, long num);

void  mgl_data_join(HMDT dat, HCDT d);


void  mgl_data_smooth(HMDT d, const char *dirs, mreal delta);

HMDT  mgl_data_sum(HCDT dat, const char *dir);

HMDT  mgl_data_first_dir(HCDT dat, const char *dir, double val);

HMDT  mgl_data_last_dir(HCDT dat, const char *dir, double val);

HMDT  mgl_data_max_dir(HCDT dat, const char *dir);

HMDT  mgl_data_min_dir(HCDT dat, const char *dir);

HMDT  mgl_data_minmax(HCDT dat);

HMDT  mgl_data_connect(HCDT a, HCDT b);

void  mgl_data_connect_r(HMDT a, HMDT b);


void  mgl_data_cumsum(HMDT dat, const char *dir);

void  mgl_data_integral(HMDT dat, const char *dir);

void  mgl_data_diff(HMDT dat, const char *dir);

void  mgl_data_diff_par(HMDT dat, HCDT v1, HCDT v2, HCDT v3);

void  mgl_data_diff2(HMDT dat, const char *dir);

void  mgl_data_swap(HMDT dat, const char *dir);

void  mgl_data_roll(HMDT dat, char dir, long num);

void  mgl_data_mirror(HMDT dat, const char *dir);

void  mgl_data_sort(HMDT dat, long idx, long idy);

void  mgl_data_dilate(HMDT dat, mreal val, long step);

void  mgl_data_erode(HMDT dat, mreal val, long step);


void  mgl_data_hankel(HMDT dat, const char *dir);

void  mgl_data_sinfft(HMDT dat, const char *dir);

void  mgl_data_cosfft(HMDT dat, const char *dir);

void  mgl_data_fill_sample(HMDT dat, const char *how);

HMDT  mgl_data_correl(HCDT dat1, HCDT dat2, const char *dir);

void  mgl_data_wavelet(HMDT dat, const char *how, int k);


 void *mgl_fft_alloc(long n, void **space, long nthr);

 void *mgl_fft_alloc_thr(long n);

void  mgl_fft_free(void *wt, void **ws, long nthr);

void  mgl_fft_free_thr(void *wt);

void  mgl_fft(double *x, long s, long n, const void *wt, void *ws, int inv);

void  mgl_clear_fft();


mreal  mgl_data_spline(HCDT dat, mreal x,mreal y,mreal z);

mreal  mgl_data_spline_ext(HCDT dat, mreal x,mreal y,mreal z, mreal *dx,mreal *dy,mreal *dz);

HMDT  mgl_gspline_init(HCDT x, HCDT v);

mreal  mgl_gspline(HCDT coef, mreal dx, mreal *d1, mreal *d2);

mreal  mgl_data_solve_1d(HCDT dat, mreal val, int spl, long i0);

HMDT  mgl_data_solve(HCDT dat, mreal val, char dir, HCDT i0, int norm);


HMDT  mgl_data_trace(HCDT d);

HMDT  mgl_data_resize(HCDT dat, long mx,long my,long mz);

HMDT  mgl_data_resize_box(HCDT dat, long mx,long my,long mz,mreal x1,mreal x2,mreal y1,mreal y2,mreal z1,mreal z2);

HMDT  mgl_data_hist(HCDT dat, long n, mreal v1, mreal v2, long nsub);

HMDT  mgl_data_hist_w(HCDT dat, HCDT weight, long n, mreal v1, mreal v2, long nsub);

HMDT  mgl_data_momentum(HCDT dat, char dir, const char *how);

HMDT  mgl_data_pulse(HCDT dat, char dir);

HMDT  mgl_data_evaluate(HCDT dat, HCDT idat, HCDT jdat, HCDT kdat, int norm);

void  mgl_data_envelop(HMDT dat, char dir);

void  mgl_data_sew(HMDT dat, const char *dirs, mreal da);

void  mgl_data_crop(HMDT dat, long n1, long n2, char dir);

void  mgl_data_crop_opt(HMDT dat, const char *how);

void  mgl_data_clean(HMDT dat, long id);


void  mgl_data_mul_dat(HMDT dat, HCDT d);

void  mgl_data_div_dat(HMDT dat, HCDT d);

void  mgl_data_add_dat(HMDT dat, HCDT d);

void  mgl_data_sub_dat(HMDT dat, HCDT d);

void  mgl_data_mul_num(HMDT dat, mreal d);

void  mgl_data_div_num(HMDT dat, mreal d);

void  mgl_data_add_num(HMDT dat, mreal d);

void  mgl_data_sub_num(HMDT dat, mreal d);


HMDT  mgl_transform_a(HCDT am, HCDT ph, const char *tr);

HMDT  mgl_transform(HCDT re, HCDT im, const char *tr);

void  mgl_data_fourier(HMDT re, HMDT im, const char *dir);

HMDT  mgl_data_stfa(HCDT re, HCDT im, long dn, char dir);


HMDT  mgl_triangulation_3d(HCDT x, HCDT y, HCDT z);

HMDT  mgl_triangulation_2d(HCDT x, HCDT y);


mreal  mgl_find_root(mreal (*func)(mreal val, void *par), mreal ini, void *par);

mreal  mgl_find_root_txt(const char *func, mreal ini, char var_id);

HMDT  mgl_data_roots(const char *func, HCDT ini, char var_id);

HMDT  mgl_find_roots_txt(const char *func, const char *vars, HCDT ini);

int  mgl_find_roots(size_t n, void (*func)(const mreal *x, mreal *f, void *par), mreal *x0, void *par);


mreal  mgl_rnd_integer(long lo, long hi);

mreal  mgl_rnd_uniform(mreal lo, mreal hi);

mreal  mgl_rnd_bernoulli(mreal p);

long  mgl_rnd_binomial(long trials, mreal p);

mreal  mgl_rnd_gaussian(mreal mu, mreal sigma);

mreal  mgl_rnd_exponential(mreal lambda);

long  mgl_rnd_discrete(HCDT A);


void  mgl_data_rnd_integer(HMDT d, long lo, long hi);

void  mgl_data_rnd_uniform(HMDT d, mreal lo, mreal hi);

void  mgl_data_rnd_bernoulli(HMDT d, mreal p);

void  mgl_data_rnd_binomial(HMDT d, long trials, mreal p);

void  mgl_data_rnd_gaussian(HMDT d, mreal mu, mreal sigma);

void  mgl_data_rnd_exponential(HMDT d, mreal lambda);

void  mgl_data_rnd_discrete(HMDT d, HCDT A);

void  mgl_shuffle(HMDT d, char dir);

void  mgl_data_brownian(HMDT d, mreal y1, mreal y2, mreal sigma, mreal alpha);

void  mgl_data_brownian_(uintptr_t *d, double *y1, double *y2, double *sigma, double *alpha);