Packages_2024/mgl2_8.0.1_(mathgl)/mgl2/data_cf.inc


function mgl_data_flame_2d(A: THCDT; F: THCDT; n: Tclong; skip: Tclong): THMDT; cdecl; external libmgl;
function mgl_data_detect(d: THCDT; lvl: Tmreal; dj: Tmreal; di: Tmreal; min_len: Tmreal): THMDT; cdecl; external libmgl;
function mgl_data_tridmat(A: THCDT; B: THCDT; C: THCDT; D: THCDT; how: pchar): THMDT; cdecl; external libmgl;
function mgl_data_value(dat: THMDT; i: Tclong; j: Tclong; k: Tclong): Pmreal; cdecl; external libmgl;
function mgl_data_data(dat: THMDT): Pmreal; cdecl; external libmgl;
function mgl_data_get_nx(d: THCDT): Tclong; cdecl; external libmgl;
function mgl_data_get_ny(d: THCDT): Tclong; cdecl; external libmgl;
function mgl_data_get_nz(d: THCDT): Tclong; cdecl; external libmgl;
function mgl_data_combine(dat1: THCDT; dat2: THCDT): THMDT; cdecl; external libmgl;
procedure mgl_data_extend(dat: THMDT; n1: Tclong; n2: Tclong); cdecl; external libmgl;
procedure mgl_data_insert(dat: THMDT; dir: char; at: Tclong; num: Tclong); cdecl; external libmgl;
procedure mgl_data_delete(dat: THMDT; dir: char; at: Tclong; num: Tclong); cdecl; external libmgl;
procedure mgl_data_join(dat: THMDT; d: THCDT); cdecl; external libmgl;
procedure mgl_data_smooth(d: THMDT; dirs: pchar; delta: Tmreal); cdecl; external libmgl;
function mgl_data_sum(dat: THCDT; dir: pchar): THMDT; cdecl; external libmgl;
function mgl_data_first_dir(dat: THCDT; dir: pchar; val: double): THMDT; cdecl; external libmgl;
function mgl_data_last_dir(dat: THCDT; dir: pchar; val: double): THMDT; cdecl; external libmgl;
function mgl_data_max_dir(dat: THCDT; dir: pchar): THMDT; cdecl; external libmgl;
function mgl_data_min_dir(dat: THCDT; dir: pchar): THMDT; cdecl; external libmgl;
function mgl_data_minmax(dat: THCDT): THMDT; cdecl; external libmgl;
function mgl_data_connect(a: THCDT; b: THCDT): THMDT; cdecl; external libmgl;
procedure mgl_data_connect_r(a: THMDT; b: THMDT); cdecl; external libmgl;
procedure mgl_data_cumsum(dat: THMDT; dir: pchar); cdecl; external libmgl;
procedure mgl_data_integral(dat: THMDT; dir: pchar); cdecl; external libmgl;
procedure mgl_data_diff(dat: THMDT; dir: pchar); cdecl; external libmgl;
procedure mgl_data_diff_par(dat: THMDT; v1: THCDT; v2: THCDT; v3: THCDT); cdecl; external libmgl;
procedure mgl_data_diff2(dat: THMDT; dir: pchar); cdecl; external libmgl;
procedure mgl_data_swap(dat: THMDT; dir: pchar); cdecl; external libmgl;
procedure mgl_data_roll(dat: THMDT; dir: char; num: Tclong); cdecl; external libmgl;
procedure mgl_data_mirror(dat: THMDT; dir: pchar); cdecl; external libmgl;
procedure mgl_data_sort(dat: THMDT; idx: Tclong; idy: Tclong); cdecl; external libmgl;
procedure mgl_data_dilate(dat: THMDT; val: Tmreal; step: Tclong); cdecl; external libmgl;
procedure mgl_data_erode(dat: THMDT; val: Tmreal; step: Tclong); cdecl; external libmgl;
procedure mgl_data_hankel(dat: THMDT; dir: pchar); cdecl; external libmgl;
procedure mgl_data_sinfft(dat: THMDT; dir: pchar); cdecl; external libmgl;
procedure mgl_data_cosfft(dat: THMDT; dir: pchar); cdecl; external libmgl;
procedure mgl_data_fill_sample(dat: THMDT; how: pchar); cdecl; external libmgl;
function mgl_data_correl(dat1: THCDT; dat2: THCDT; dir: pchar): THMDT; cdecl; external libmgl;
procedure mgl_data_wavelet(dat: THMDT; how: pchar; k: longint); cdecl; external libmgl;

function mgl_fft_alloc(n: Tclong; space: Ppointer; nthr: Tclong): pointer; cdecl; external libmgl;
function mgl_fft_alloc_thr(n: Tclong): pointer; cdecl; external libmgl;
procedure mgl_fft_free(wt: pointer; ws: Ppointer; nthr: Tclong); cdecl; external libmgl;
procedure mgl_fft_free_thr(wt: pointer); cdecl; external libmgl;
procedure mgl_fft(x: Pdouble; s: Tclong; n: Tclong; wt: pointer; ws: pointer; inv: longint); cdecl; external libmgl;
procedure mgl_clear_fft; cdecl; external libmgl;

function mgl_data_spline(dat: THCDT; x: Tmreal; y: Tmreal; z: Tmreal): Tmreal; cdecl; external libmgl;
function mgl_data_spline_ext(dat: THCDT; x: Tmreal; y: Tmreal; z: Tmreal; dx: Pmreal; dy: Pmreal; dz: Pmreal): Tmreal; cdecl; external libmgl;
function mgl_gspline_init(x: THCDT; v: THCDT): THMDT; cdecl; external libmgl;
function mgl_gspline(coef: THCDT; dx: Tmreal; d1: Pmreal; d2: Pmreal): Tmreal; cdecl; external libmgl;
function mgl_data_solve_1d(dat: THCDT; val: Tmreal; spl: longint; i0: Tclong): Tmreal; cdecl; external libmgl;
function mgl_data_solve(dat: THCDT; val: Tmreal; dir: char; i0: THCDT; norm: longint): THMDT; cdecl; external libmgl;
function mgl_data_trace(d: THCDT): THMDT; cdecl; external libmgl;
function mgl_data_resize(dat: THCDT; mx: Tclong; my: Tclong; mz: Tclong): THMDT; cdecl; external libmgl;
function mgl_data_resize_box(dat: THCDT; mx: Tclong; my: Tclong; mz: Tclong; x1: Tmreal; x2: Tmreal; y1: Tmreal; y2: Tmreal; z1: Tmreal; z2: Tmreal): THMDT; cdecl; external libmgl;
function mgl_data_hist(dat: THCDT; n: Tclong; v1: Tmreal; v2: Tmreal; nsub: Tclong): THMDT; cdecl; external libmgl;
function mgl_data_hist_w(dat: THCDT; weight: THCDT; n: Tclong; v1: Tmreal; v2: Tmreal; nsub: Tclong): THMDT; cdecl; external libmgl;
function mgl_data_momentum(dat: THCDT; dir: char; how: pchar): THMDT; cdecl; external libmgl;
function mgl_data_pulse(dat: THCDT; dir: char): THMDT; cdecl; external libmgl;
function mgl_data_evaluate(dat: THCDT; idat: THCDT; jdat: THCDT; kdat: THCDT; norm: longint): THMDT; cdecl; external libmgl;
procedure mgl_data_envelop(dat: THMDT; dir: char); cdecl; external libmgl;
procedure mgl_data_sew(dat: THMDT; dirs: pchar; da: Tmreal); cdecl; external libmgl;
procedure mgl_data_crop(dat: THMDT; n1: Tclong; n2: Tclong; dir: char); cdecl; external libmgl;
procedure mgl_data_crop_opt(dat: THMDT; how: pchar); cdecl; external libmgl;
procedure mgl_data_clean(dat: THMDT; id: Tclong); cdecl; external libmgl;
procedure mgl_data_mul_dat(dat: THMDT; d: THCDT); cdecl; external libmgl;
procedure mgl_data_div_dat(dat: THMDT; d: THCDT); cdecl; external libmgl;
procedure mgl_data_add_dat(dat: THMDT; d: THCDT); cdecl; external libmgl;
procedure mgl_data_sub_dat(dat: THMDT; d: THCDT); cdecl; external libmgl;
procedure mgl_data_mul_num(dat: THMDT; d: Tmreal); cdecl; external libmgl;
procedure mgl_data_div_num(dat: THMDT; d: Tmreal); cdecl; external libmgl;
procedure mgl_data_add_num(dat: THMDT; d: Tmreal); cdecl; external libmgl;
procedure mgl_data_sub_num(dat: THMDT; d: Tmreal); cdecl; external libmgl;

function mgl_transform_a(am: THCDT; ph: THCDT; tr: pchar): THMDT; cdecl; external libmgl;
function mgl_transform(re: THCDT; im: THCDT; tr: pchar): THMDT; cdecl; external libmgl;
procedure mgl_data_fourier(re: THMDT; im: THMDT; dir: pchar); cdecl; external libmgl;
function mgl_data_stfa(re: THCDT; im: THCDT; dn: Tclong; dir: char): THMDT; cdecl; external libmgl;
function mgl_triangulation_3d(x: THCDT; y: THCDT; z: THCDT): THMDT; cdecl; external libmgl;
function mgl_triangulation_2d(x: THCDT; y: THCDT): THMDT; cdecl; external libmgl;

type
  Troot_func = function(val: Tmreal; par: pointer): Tmreal; cdecl;
  Troots_func = procedure(x: Pmreal; f: Pmreal; par: pointer); cdecl;

function mgl_find_root(func: Troot_func; ini: Tmreal; par: pointer): Tmreal; cdecl; external libmgl;
function mgl_find_root_txt(func: pchar; ini: Tmreal; var_id: char): Tmreal; cdecl; external libmgl;
function mgl_data_roots(func: pchar; ini: THCDT; var_id: char): THMDT; cdecl; external libmgl;
function mgl_find_roots_txt(func: pchar; vars: pchar; ini: THCDT): THMDT; cdecl; external libmgl;
function mgl_find_roots(n: Tsize_t; func: Troots_func; x0: Pmreal; par: pointer): longint; cdecl; external libmgl;

function mgl_rnd_integer(lo: Tclong; hi: Tclong): Tmreal; cdecl; external libmgl;
function mgl_rnd_uniform(lo: Tmreal; hi: Tmreal): Tmreal; cdecl; external libmgl;
function mgl_rnd_bernoulli(p: Tmreal): Tmreal; cdecl; external libmgl;
function mgl_rnd_binomial(trials: Tclong; p: Tmreal): longint; cdecl; external libmgl;
function mgl_rnd_gaussian(mu: Tmreal; sigma: Tmreal): Tmreal; cdecl; external libmgl;
function mgl_rnd_exponential(lambda: Tmreal): Tmreal; cdecl; external libmgl;
function mgl_rnd_discrete(A: THCDT): Tclong; cdecl; external libmgl;

procedure mgl_data_rnd_integer(d: THMDT; lo: Tclong; hi: Tclong); cdecl; external libmgl;
procedure mgl_data_rnd_uniform(d: THMDT; lo: Tmreal; hi: Tmreal); cdecl; external libmgl;
procedure mgl_data_rnd_bernoulli(d: THMDT; p: Tmreal); cdecl; external libmgl;
procedure mgl_data_rnd_binomial(d: THMDT; trials: Tclong; p: Tmreal); cdecl; external libmgl;
procedure mgl_data_rnd_gaussian(d: THMDT; mu: Tmreal; sigma: Tmreal); cdecl; external libmgl;
procedure mgl_data_rnd_exponential(d: THMDT; lambda: Tmreal); cdecl; external libmgl;
procedure mgl_data_rnd_discrete(d: THMDT; A: THCDT); cdecl; external libmgl;
procedure mgl_shuffle(d: THMDT; dir: char); cdecl; external libmgl;
procedure mgl_data_brownian(d: THMDT; y1: Tmreal; y2: Tmreal; sigma: Tmreal; alpha: Tmreal); cdecl; external libmgl;
procedure mgl_data_brownian_(d: Puintptr_t; y1: Pdouble; y2: Pdouble; sigma: Pdouble; alpha: Pdouble); cdecl; external libmgl;

// === Konventiert am: 26-6-25 19:46:00 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}



{$ENDIF read_implementation}
